# Smart-Waste-Management-_system

./: .gitignore  README.md  app.py  cookies.txt  cookies2.txt  create_new_task_for_bashar.py  fix_bashar_vehicle.py  i18n.py  main.py  models.py  pyproject.toml  requirements.txt
firmware/: README.md
firmware/esp8266_sensor/: esp8266_sensor.ino
messages/: ar.json  en.json
routes/: bin_routes.py  main_routes.py  optimize_routes.py
static/css/: style.css
static/js/: main.js
templates/: base.html  bins.html  create_task.html  dashboard.html  driver_dashboard.html  drivers.html  landing.html  live_map.html  login.html  reports.html
