[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.6.2",
    "click==8.1.7",
    "cryptography==41.0.7",
    "eventlet>=0.40.4",
    "flask==2.3.3",
    "flask-socketio==5.3.6",
    "flask-sqlalchemy==3.0.5",
    "gunicorn>=25.1.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "psycopg2-binary>=2.9.11",
    "pymysql==1.1.0",
    "python-dotenv==1.0.0",
    "python-engineio==4.7.1",
    "python-socketio==5.9.0",
    "sqlalchemy==2.0.21",
    "waitress>=3.0.2",
    "werkzeug==2.3.7",
]
